--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container fPage">
         <nav class="navbar navbar-light">
             <div class="d-flex search-holder row w-100 justify-content-between">
               <form class="d-flex col-5 form">
@@ -41,6 +41,41 @@
         <div class="row myDiv">
         </div>
         <script src="script.js"></script>
+    </div>
+    <div class="container sPage d-none">
+      <a id="fPage" class="btn btn-secondary mb-3 px-3"><i class="uil uil-arrow-left"></i> Back</a>
+      <div class="row myDiv2">
+        <div class="imgDiv col-4" id="imgDiv">
+          <img id="flag"  alt="Country's flag">
+        </div>
+        <div class="infoDiv col-5">
+          <h2 id="title" class=" fs-3 text-muted" >Title</h2> <br>
+          <div class="about d-flex justify-content-between">
+            <ul class="list-group">
+              <li class="list-group-item border-0" id="nativName" >1</li>
+              <li class="list-group-item border-0" id="population">2</li>
+              <li class="list-group-item border-0" id="region">3</li>
+              <li class="list-group-item border-0" id="subRegion">4</li>
+              <li class="list-group-item border-0" id="capital">5</li>
+            </ul>
+            <ul class="list-group">
+              <li class="list-group-item border-0" id="topLevelDomain" >1</li>
+              <li class="list-group-item border-0" id="currencies">2</li>
+              <li class="list-group-item border-0" id="lang">3</li>
+              
+            </ul>
+          </div>
+          <br>
+          <div class="flexiable d-flex justify-content-between">
+            <p class="bC fs-5">Border Countries: </p>
+            <a id="one" class="btn btn-secondary">France</a>
+            <a id="two" class="btn btn-secondary">Germany</a>
+            <a id="three" class="btn btn-secondary">Netherlands</a>
+          </div>
+
+        </div>
+
+      </div>
     </div>
 </body>
 
